src/index.css
@import "tailwindcss";

@theme {
    --color-primary: #B88E2F;
    --color-secondary: #FFF3E3;
    --color-grey: #333333;
}

.active {
    color: #B88E2F;
}

/* Mobile landscape mode fix for hero section */
@media screen and (max-height: 500px) and (orientation: landscape) {
    section.relative.h-\[80vh\] {
        min-height: 600px !important;
        height: auto !important;
    }
}

@media screen and (width: 1024px) and (height: 1366px) {
    .products-grid {
        grid-template-columns: repeat(2, 1fr) !important;
    }
}

@media screen and (min-width: 1280px) and (max-width: 1540px) {
    .products-grid {
        grid-template-columns: repeat(3, 1fr) !important;
    }
}

